<resources>
  <string name="app_name">Kidnapped</string>
  <string name="navigation_drawer_open">Open navigation drawer</string>
  <string name="navigation_drawer_close">Close navigation drawer</string>
  <string name="nav_header_title">Design House Studios</string>
  <string name="nav_header_subtitle">isaac@designhouse.dev</string>
  <string name="nav_header_desc">Navigation header</string>
  <string name="action_settings">Settings</string>

  <string name="menu_home">Home</string>
  <string name="menu_gallery">Add Contact</string>
  <string name="menu_slideshow">Record Passphrase</string>
  <string name="kidnapped_app_home_title">
██╗░░██╗██╗██████╗░███╗░░██╗░█████╗░██████╗░██████╗░███████╗██████╗░  ░█████╗░██████╗░██████╗░
██║░██╔╝██║██╔══██╗████╗░██║██╔══██╗██╔══██╗██╔══██╗██╔════╝██╔══██╗  ██╔══██╗██╔══██╗██╔══██╗
█████═╝░██║██║░░██║██╔██╗██║███████║██████╔╝██████╔╝█████╗░░██║░░██║  ███████║██████╔╝██████╔╝
██╔═██╗░██║██║░░██║██║╚████║██╔══██║██╔═══╝░██╔═══╝░██╔══╝░░██║░░██║  ██╔══██║██╔═══╝░██╔═══╝░
██║░╚██╗██║██████╔╝██║░╚███║██║░░██║██║░░░░░██║░░░░░███████╗██████╔╝  ██║░░██║██║░░░░░██║░░░░░
╚═╝░░╚═╝╚═╝╚═════╝░╚═╝░░╚══╝╚═╝░░╚═╝╚═╝░░░░░╚═╝░░░░░╚══════╝╚═════╝░  ╚═╝░░╚═╝╚═╝░░░░░╚═╝░░░░░ ©</string>
  <string name="record_a_passphrase">Record a Passphrase</string>
  <string name="add_a_contact_header">Add A Contact</string>
  <string name="phone_hint">555-123-4567</string>
  <string name="add_phone_number">Add Phone Number :</string>
  <string name="name_hint">(name goes here..)</string>
  <string name="cancel_button">Cancel</string>
  <string name="save_button">SAVE</string>
  <string name="add_alert_text">Type Alert Text Here :</string>
  <string name="alert_text_hint">Ex: SOS! HELP! CALL 911!!!</string>
  <string name="stay_alive">Stay Alive!!!</string>
  <string name="add_a_contact_button">Add a Contact</string>
  <string name="record_a_passphrase_header">Record A Passphrase</string>
  <string name="_button">RECORD</string>
  <string name="record_again">RECORD AGAIN?</string>
  <string name="playback">Playback</string>
</resources>