<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
  xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  xmlns:tools="http://schemas.android.com/tools"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  android:background="@drawable/background_fill"
  tools:context=".controller.ui.passphrase.PassphraseFragment">


  <androidx.constraintlayout.widget.Guideline
    android:id="@+id/guideline5"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    app:layout_constraintGuide_begin="365dp"/>
  <androidx.constraintlayout.widget.Guideline
    android:id="@+id/guideline6"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    app:layout_constraintGuide_begin="205dp"/>
  <TextView
    android:id="@+id/text_passphrase"
    android:layout_width="354dp"
    android:layout_height="116dp"
    android:gravity="center"
    android:text="@string/record_a_passphrase_header"
    android:textColor="@color/turquoise"
    android:textSize="40sp"
    app:layout_constraintBottom_toTopOf="@+id/guideline5"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintHorizontal_bias="0.49"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent"
    app:layout_constraintVertical_bias="0.43"/>

  <Button
    android:id="@+id/button5"
    android:layout_width="150dp"
    android:layout_height="60dp"
    android:layout_marginBottom="140dp"
    android:background="@drawable/rounded_buttons"
    android:text="@string/record_again"
    android:textColor="@color/magenta"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintEnd_toStartOf="@+id/guideline6"
    app:layout_constraintHorizontal_bias="0.29"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="@+id/guideline5"
    app:layout_constraintVertical_bias="1.0"/>


  <Button
    android:id="@+id/button6"
    android:layout_width="150dp"
    android:layout_height="60dp"
    android:background="@drawable/rounded_buttons"
    android:text="@string/save_button"
    android:textColor="@color/turquoise"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintHorizontal_bias="0.714"
    app:layout_constraintStart_toStartOf="@+id/guideline6"
    app:layout_constraintTop_toTopOf="@+id/guideline5"
    app:layout_constraintVertical_bias="0.542"/>
</androidx.constraintlayout.widget.ConstraintLayout>